# broadview-backend

./: .env  .gitignore  Cargo.toml  Rocket.toml  deploy-prod.sh
.github/workflows/: deploy.yml
config/: broadview-backend.service
src/: auth.rs  database.rs  main.rs  models.rs  state.rs
src/api/: mod.rs  resident_api.rs  votes_api.rs
src/api/ban_api/: mod.rs  v1.rs  v2.rs
src/api/resident_api/: v1.rs
src/guards/: api_key.rs  governor.rs  mod.rs
