[package]
name = "broadview-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.5", features = ["tracing"] }
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
roboat = "0.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde-bool = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
sqlite = "0.34.0"
